# kripfunc

./: LICENSE  README.md  setup.cfg  sqlite.py
kripfunc/: sqlite.py
