[metadata]
name = kripfunc
version = 0.0.1
author = vinkami
author_email = vinkami.krip@gmail.com
description = A random function set made by vinkami
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vinkami/kripfunc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable

[options]
packages = find:
python_requires = >=3